--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root{
+  --mainColor:#f57224;
+  --whiteColor:#fff;
+  --blackColor:#000;
+  --lightDark:#222;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  font-family: 'Lato',sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav{
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  padding: 0 100px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, .1);
   display: flex;
-  flex-direction: column;
+  position: fixed;
+  top: 0;
+}
+
+.left{
+  text-align: left;
+  width: 50%;
+}
+.left a{
+  color: var(--mainColor);
+  font-weight: 700;
+  font-size: 21px;
+}
+.right{
+  text-align: right;
+  width: 50%;
+}
+nav ul{
+  list-style: none;
+}
+nav ul a{
+  text-decoration: none;
+}
+
+.shoppingCart i{
+  font-size: 20px;
+  display: inline-block;
+  color: var(--lightDark);
+  margin-right: 15px;
+}
+.cartCount{
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  background-color: var(--mainColor);
+  color: var(--whiteColor);
+  line-height: 35px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 12px;
+}
+
+/*HELPERS*/
+
+.container{
+  width: 100%;
+  padding: 0 100px;
+}
+
+/* BANNER*/
+
+header{
+  width: 100%;
+  background: url('./assets/bbb.jpg');
+  height: 450px;
+  margin-top: 70px;
+  background-size:cover  ;
+  background-repeat: no-repeat;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+  color: #fff;
+
+}
+
+.headerText{
+  width: 100%;
+  background: rgba(0, 0, 0, .5);
+  height: 100%;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.headerText h1{
+  font-size: 50px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.headerText p{
+  font-size: 20px;
+  margin-top: 7px;
 }
