--- a/src/App.css
+++ b/src/App.css
@@ -181,3 +181,106 @@ header{
   margin-top: 100px;
   text-align: center;
 }
+
+
+/********CART STYLES*******/
+
+.cart-container{
+  width: 100%;
+  margin-top: 40px;
+  padding: 0 100px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+
+}
+
+.cart-details{
+  width: 75%;
+  border: 1px solid #fafafa;
+  border-radius: 5px;
+
+}
+
+.cart{
+  display: flex;
+  align-items: center;
+  background: var(--whiteColor);
+  padding: 15px 20px;
+
+}
+.cart-image{
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.cart-image img{
+   width: 100%;
+   height: 100%;
+}
+
+.cart-product-name{
+  width: 150px;
+  padding: 0 15px;
+  font-weight: bold;
+  font-size: 14px;
+  display: inline-block;
+}
+.cart-product-price{
+  width: 120px;
+  padding: 0 15px;
+  display: inline-block;
+  text-align: center;
+  font-weight: bold;
+  color: var(--mainColor);
+}
+.inc{
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  border: 1px solid green;
+  font-size: 14px;
+  color: var(--mainColor);
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.product-quantity{
+  display: inline-block;
+  padding: 0 15px;
+  font-size: 15px;
+  width: 70px;
+  text-align: center;
+}
+
+.dec{
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  border: 1px solid rgb(187,58,58);
+  font-size: 14px;
+  color: rgb(187,58,58);
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.product-total-price{
+  display: inline-block;
+  width: 170px;
+  padding: 0 15px;
+  text-align:center;
+
+}
+.delete-product{
+  border: none;
+  color: rgb(187,58,58);
+  cursor: pointer;
+}
+
+
