--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ nav{
   position: fixed;
   top: 0;
   background: #fff;
-  z-index: 999999999999999999;
+  z-index: 999;
 }
 
 .left{
@@ -187,7 +187,7 @@ header{
 
 .cart-container{
   width: 100%;
-  margin-top: 40px;
+  margin-top: 70px;
   padding: 0 100px;
   display: flex;
   flex-wrap: wrap;
@@ -282,5 +282,141 @@ header{
   color: rgb(187,58,58);
   cursor: pointer;
 }
+
+
+
+
+/********CART SUMMERY*********/
+ 
+.cart-summery{
+  width: 25%;
+  padding: 0 0 0 20px;
+  margin-top: 90px;
+}
+.summery{
+  background: var(--whiteColor);
+  padding: 13px;
+}
+
+.summery h3{
+  font-size: 18px;
+  font-weight: normal;
+  border-bottom: 1px solid #999;
+  padding-bottom: 8px;
+}
+.total-items{
+  display: flex;
+  margin: 15px 0;
+}
+.items{
+  width: 50%;
+  text-align: left;
+  font-weight: normal;
+}
+.items-count{
+  width: 50%;
+  text-align: right;
+  font-weight: bold;
+  color: var(--mainColor  );
+}
+.total-price-section{
+  display: flex;
+  margin: 15px 0;
+}
+.just-title{
+  width: 50%;
+  text-align: left;
+  font-weight: normal ;
+}
+.items-price{
+  width: 50%;
+  text-align: right;
+  font-weight: bold;
+  color: var(--mainColor);
+}
+
+
+
+/*************res****************/
+
+
+@media(max-width: 765px){
+  .products{
+    flex-wrap: wrap;
+  }
+  .product {
+   width: 100%;
+  }
+  .headerText {
+    padding: 0 100px;
+  }
+  .headerText h1 {
+    font-size: 20px;
+  }
+  .cartContainer {
+    flex-direction: column;
+  }
+  .cartDetails {
+    width: 100%;
+  }
+  .cartSummary {
+    width: 100%;
+    margin-top: 20px;
+  }
+  .cart {
+    flex-direction: column;
+  }
+  
+  .cartProductName {
+    width: 250px;
+    padding: 14px 15px;
+    font-size: 14px;
+    text-align: center;
+  }
+  .cartProductPrice {
+    width: 120px;
+    padding: 14 15px;
+    font-weight: bold;
+    text-align: center;
+  }
+  .inc {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid #222;
+    border-radius: 50%;
+    cursor: pointer;
+    margin: 15px 0;
+  }
+  .productQuantity {
+    display: inline-block;
+    padding: 14 15px;
+    font-size: 16px;
+    width: 70px;
+    text-align: center;
+  }
+  .dec {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid #222;
+    border-radius: 50%;
+    cursor: pointer;
+    margin: 15px 0;
+  }
+  .productTotalPrice {
+    display: inline-block;
+    width: 150px;
+    padding: 14px 15px;
+    font-weight: bold;
+    color: #999;
+    text-align: center;
+  }
+}
+ 
 
 
